[tool.poetry]
name = "ed-streamdeck"
version = "0.1.1"
description = ""
authors = ["Violet Eldridge <github@violet-mica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vsdlib = {git = "ssh://git@github.com/violet4/vsdlib.git"}
pynput = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
